# RAG_Structured_Unstructured

./: .gitignore  README.md  chunker.py  ingest_csv.py  ingest_pdf.py  main.py  pyproject.toml  rag_graph.py  retriever.py
data/: employees.csv  expenses.csv  sample_data.csv
embedding_retrival_layer/: graph_retriever.py  retriever.py
ingestion_layer/: ingest_csv.py  ingest_graph.py
orchestration_layer/: graph_rag_chain.py  rag_graph.py
