[project]
name = "rag-structured-unstructured"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.5.1",
    "faiss-cpu>=1.14.2",
    "isort>=8.0.1",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.2",
    "langsmith>=0.8.7",
    "pandas>=3.0.3",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "pymupdf>=1.27.2.3",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "tiktoken>=0.13.0",
]
